Testando css em e automação de elementos em react

--- a/createElements.html
+++ b/createElements.html
@@ -56,7 +56,6 @@
 </head>
 
 <body>
-
     <section class="content">
 
     </section>
@@ -178,9 +177,8 @@
             }
         }
 
-        const teste = new creteNodeElement('.content', 'div', items, 'class', 'teste')
-        teste.createContent()
-
+        const dados = new creteNodeElement('.content', 'div', items, 'class', 'teste')
+        dados.createContent()
 
     </script>
 </body>
